--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,8 +24,10 @@
                             <nav id="forkme_banner">
         <center><a href="#">Sign in</a> |
         <a href="#">Register</a> |
-        <a href="#">About Us</a> </center>
+        <a href="#">About Us</a> 
+        {% include search %}</center>
         </nav>
+        
 
             <!--<section id="downloads">
               <a class="zip_download_link" href="https://github.com/ajsingh273/office/zipball/master">Download this project as a .zip file</a>
@@ -34,6 +36,5 @@
         </header>
     </div>
 
-
-
+{% include nav %}
 
