--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,12 +21,12 @@
                     <a id="project_title" href="/"><img  src="images/ita.jpg" width="250px"></a>
           <!--<h2 id="project_tagline">Trade office template for new Trade.gov</h2>-->
           
-                            <nav id="forkme_banner">
-        <center><a href="#">Sign in</a> |
-        <a href="#">Register</a> |
-        <a href="#">About Us</a> 
+                            <ul id="forkme_banner">
+        <center><li><a href="#">Sign in</a> |</li>
+        <li><a href="#">Register</a> |</li>
+        <li><a href="#">About Us</a> </li>
         {% include search %}</center>
-        </nav>
+        </ul>
         
 
             <!--<section id="downloads">
@@ -35,6 +35,5 @@
             </section>-->
         </header>
     </div>
-
 {% include nav %}
 
