--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,91 @@
-<!-- FOOTER  -->
+    <div id="footer_wrap2" class="outer">
+      <footer class="inner">
+      <table>
+<tr>
+		<td><p><strong>The Export Process</strong> 
+		<ul style="list-style-type:none;">
+		<li><a href="#">Export Basics</a></li>
+		<li><a href="#">Basic Guide to Exporting</a></li>
+		<li><a href="#">Export Readiness Assessment</a></li>
+		<li><a href="#">International Logistics</a></li>
+		</ul>
+		</p></td>
+
+		<td><p><strong>Explore Opportunities</strong>
+		<ul style="list-style-type:none;">
+		<li><a href="#">Expand Into New Markets</a></li>
+		<li><a href="#">Market Research</a></li>
+		<li><a href="#">Success Stories</a></li>
+		</ul>
+		</p></td>
+
+		<td><p><strong>Obtain Financing</strong>
+		<ul style="list-style-type:none;">
+		<li><a href="#">Finance Your Exports</a></li>
+		<li><a href="#">Assess Your Finance Options</a></li>
+		<li><a href="#">Getting Paid</a></li>
+		<li><a href="#">Trade Finance Guide</a></li>
+		</ul>
+		</p></td>
+
+		<td><p><strong>Comply With Regulations</strong>
+		<ul style="list-style-type:none;">
+		<li><a href="#">Export Licences & Regulations</a></li>
+		</ul>
+		</p>
+		<p><strong>Contacts & Answers</strong>
+		<ul style="list-style-type:none;">
+		<li><a href="#">Browse FAQs</a></li>
+		<li><a href="#">Ask a Question</a></li>
+		<li><a href="#">Contact a Trade Specialist</a></li>
+		<li><a href="#">Domestic Offices</a></li>
+		<li><a href="#">International Offices</a></li>
+		</ul>
+		</p>
+		</td>
+
+		<td><p><strong>Attend Trade Events</strong>
+		<ul style="list-style-type:none;">
+		<li><a href="#">Trade Events</a></li>
+		<li><a href="#">Training Programs</a></li>
+		<li><a href="#">Webinars</a></li>
+		</ul>
+		</p></td>
+		<td>
+		<p><strong>About Us</strong>
+		<ul style="list-style-type:none;">
+		<li><a href="#">Our Locations</a></li>
+		<li><a href="#">Our People</a></li>
+		<li><a href="#">Our Partners</a></li>
+		</ul>
+		</p>
+		</td>
+</tr>
+</table>   
+      </footer>
+    </div>  
+   
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Office maintained by <a href="https://github.com/ajsingh273">ajsingh273</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+
+        <p class="copyright">Export.gov is an official site of the U.S. Government
+        <ul>
+        <li><a href="#">Submit Feedback</a> |</li>
+        <li><a href="#">Contact Us</a> |</li>
+        <li><a href="#">Privacy Policy</a> |</li>
+        <li><a href="#">Disclaimer</a> |</li>
+        <li><a href="#">About Us</a> |</li>
+        <li><a href="#">USA.gov</a> |</li>
+        <li><a href="#">FOIA</a> |</li>
+        <li><a href="#">Information Quality</a> |</li>
+        <li><a href="#">No Fear</a> |</li>
+        <li><a href="#">Site Map</a> |</li>
+        <li><a href="#">Download Adobe Reader</a> </li>
+        </ul>
+        </p>
+   
       </footer>
     </div>
-
-    
 
   </body>
 </html>
