--- a/_includes/info.html
+++ b/_includes/info.html
@@ -1,1 +1,9 @@
 <!--info.html-->
+
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+
+{% include title %}
+{% include herobox %}
