--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -67,8 +67,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 30px;
   font-weight: 700;
+  font-style:italic;
 }
 
 h2 {
@@ -275,7 +276,7 @@ Full-Width Styles
   color: #fff;
   background: #0090ff no-repeat 95% 50%;
   font-weight: 700;
-  box-shadow: 0 0 10px rgba(0,0,0,.5);
+
   border-bottom-left-radius: 2px;
   border-bottom-right-radius: 2px;
   font-size:12px;
