--- a/_includes/info.html
+++ b/_includes/info.html
@@ -6,4 +6,11 @@
       <section id="main_content" class="inner">
 
 {% include title %}
-{% include herobox %}
+
+
+<div style="width: 100%; overflow: hidden;">
+    <div style="width: 800px; float: left;"> {% include herobox %} </div>
+    <div style="margin-left: 820px;">{% include contact %} </div>
+</div>
+
+
