--- a/_includes/info.html
+++ b/_includes/info.html
@@ -9,8 +9,8 @@
 
 
 <div style="width: 100%; overflow: hidden;">
-    <div style="width: 800px; float: left;"> {% include herobox %} </div>
-    <div style="margin-left: 820px;">{% include contact %} </div>
+    <div style="float:left"> {% include herobox %} </div>
+    <div style="float:right">{% include contact %} </div>
 </div>
 
 
