--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,19 +1,25 @@
+<style>
+#art{
+background-color:#fff;
+padding: 10px;
+}
 
-<div style="width: 100%; overflow: hidden;">
-    <div style="width: 600px; float: left;"> {% include events %} </div>
-    <div style="margin-left: 620px;">{% include mrr %} </div>
-</div>
 
-<div style="width: 100%; overflow: hidden;">
-    <div style="width: 600px; float: left;">  {% include faqs %} </div>
-    <div style="margin-left: 620px;">{% include articles %} </div>
-</div>
+</style>
 
-<div style="width: 100%; overflow: hidden;">
-    <div style="width: 500px; float: left;">   {% include resources %} </div>
-    <div style="margin-left: 550px;"> {% include network %} </div>
-</div>
-    
+<table>
+<tr>
+<td id="art">{% include events %}</td> 
+<td id="art">{% include mrr %} </td> 
+</tr>
 
+<tr><td id="art">{% include faqs %}</td> 
+<td id="art">{% include articles %} </td> 
+</tr>
+
+<tr><td id="art">{% include resources %}</td> 
+<td id="art">{% include network %} </td> 
+</tr>
+</table>
 
  
