--- a/_includes/main.html
+++ b/_includes/main.html
@@ -9,16 +9,16 @@ padding: 10px;
 
 <table>
 <tr>
-<td id="art">{% include events %}</td> 
-<td id="art">{% include mrr %} </td> 
+<td>{% include events %}</td> 
+<td >{% include mrr %} </td> 
 </tr>
 
-<tr><td id="art">{% include faqs %}</td> 
-<td id="art">{% include articles %} </td> 
+<tr><td >{% include faqs %}</td> 
+<td>{% include articles %} </td> 
 </tr>
 
-<tr><td id="art">{% include resources %}</td> 
-<td id="art">{% include network %} </td> 
+<tr><td >{% include resources %}</td> 
+<td>{% include network %} </td> 
 </tr>
 </table>
 
