--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,25 +1,22 @@
 <style>
 #art{
 background-color:#fff;
-padding: 10px;
+padding: 20px;
+margin: 20px;
 }
 
 
 </style>
 
-<table>
-<tr>
-<td>{% include events %}</td> 
-<td >{% include mrr %} </td> 
-</tr>
+<div id="art">{% include events %} </div>
+<div id="art">{% include mrr %} </div>
 
-<tr><td >{% include faqs %}</td> 
-<td>{% include articles %} </td> 
-</tr>
+<div id="art">{% include faqs %} </div>
+<div id="art">{% include articles %}</div>
 
-<tr><td >{% include resources %}</td> 
-<td>{% include network %} </td> 
-</tr>
-</table>
+
+<div id="art">{% include resources %}</div>
+<div id="art">{% include network %}</div>
+
 
  
