--- a/_includes/main.html
+++ b/_includes/main.html
@@ -3,20 +3,24 @@
 background-color:#fff;
 padding: 20px;
 margin: 20px;
+width: 400px;
 }
 
 
 </style>
 
+<table>
+<tr>
+<td>
 <div id="art">{% include events %} </div>
-<div id="art">{% include mrr %} </div>
-
 <div id="art">{% include faqs %} </div>
-<div id="art">{% include articles %}</div>
-
-
 <div id="art">{% include resources %}</div>
+</td>
+<td>
+<div id="art">{% include mrr %} </div>
+<div id="art">{% include articles %}</div>
 <div id="art">{% include network %}</div>
-
-
+</td>
+</tr>
+</table>
  
