--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,9 @@
 
     <div id="footer_wrap2" class="outer">
       <footer class="inner">
-      <table>
+      <table id="foot">
 <tr>
-		<td><p><strong>The Export Process</strong> 
+		<td><p><strong>Export Process</strong> 
 		<ul style="list-style-type:none;">
 		<li><a href="#">Export Basics</a></li>
 		<li><a href="#">Basic Guide to Exporting</a></li>
@@ -13,7 +13,7 @@
 		</ul>
 		</p></td>
 
-		<td><p><strong>Explore Opportunities</strong>
+		<td><p><strong>Opportunities</strong>
 		<ul style="list-style-type:none;">
 		<li><a href="#">Expand Into New Markets</a></li>
 		<li><a href="#">Market Research</a></li>
@@ -21,7 +21,7 @@
 		</ul>
 		</p></td>
 
-		<td><p><strong>Obtain Financing</strong>
+		<td><p><strong>Financing</strong>
 		<ul style="list-style-type:none;">
 		<li><a href="#">Finance Your Exports</a></li>
 		<li><a href="#">Assess Your Finance Options</a></li>
@@ -30,12 +30,27 @@
 		</ul>
 		</p></td>
 
-		<td><p><strong>Comply With Regulations</strong>
+		<td><p><strong>Regulations</strong>
 		<ul style="list-style-type:none;">
 		<li><a href="#">Export Licences & Regulations</a></li>
 		</ul>
 		</p>
-		<p><strong>Contacts & Answers</strong>
+		<p><strong>Trade Problems</strong>
+		<ul style="list-style-type:none;">
+		<li><a href="#">Problem 1</a></li>
+		<li><a href="#">Problem 2</a></li>
+		</ul>
+		</p>
+		</td>
+				<td><p><strong>Events & Training</strong>
+		<ul style="list-style-type:none;">
+		<li><a href="#">Trade Events</a></li>
+		<li><a href="#">Training Programs</a></li>
+		<li><a href="#">Webinars</a></li>
+		</ul>
+		</p></td>
+		<td>
+		<p><strong>Get Answers</strong>
 		<ul style="list-style-type:none;">
 		<li><a href="#">Browse FAQs</a></li>
 		<li><a href="#">Ask a Question</a></li>
@@ -46,15 +61,8 @@
 		</p>
 		</td>
 
-		<td><p><strong>Attend Trade Events</strong>
-		<ul style="list-style-type:none;">
-		<li><a href="#">Trade Events</a></li>
-		<li><a href="#">Training Programs</a></li>
-		<li><a href="#">Webinars</a></li>
-		</ul>
-		</p></td>
 		<td>
-		<p><strong>About Us</strong>
+		<p><strong>Get Export Assistance</strong>
 		<ul style="list-style-type:none;">
 		<li><a href="#">Our Locations</a></li>
 		<li><a href="#">Our People</a></li>
@@ -70,7 +78,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
 
-        <p class="copyright">Export.gov is an official site of the U.S. Government
+        <p class="copyright">Trade.gov is an official site of the U.S. Government
         <ul>
         <li><a href="#">Submit Feedback</a> |</li>
         <li><a href="#">Contact Us</a> |</li>
