--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,10 +24,14 @@
                             <ul id="forkme_banner">
         <center><li><a href="#">Sign in</a> |</li>
         <li><a href="#">Register</a> |</li>
-        <li><a href="#">About Us</a> </li>
+        <li><a href="https://developer.trade.gov">Developer API</a> </li>
         {% include search %}</center>
+        <li><a href="https://www.facebook.com/TradeGov"><img  src="images/fb.png" width="25px"></a> </li>
+        <li><a href="https://twitter.com/TradeGov"><img  src="images/twit.png" width="25px"></a> </li>
+        <li><a href="http://blog.trade.gov/"><img  src="images/tradeology.png" width="25px"></a> </li>
+        <li><a href="http://trade.gov/connect.asp"><img  src="images/mail.png" width="25px"></a> </li>
         </ul>
-        
+
 
             <!--<section id="downloads">
               <a class="zip_download_link" href="https://github.com/ajsingh273/office/zipball/master">Download this project as a .zip file</a>
