--- a/_includes/info.html
+++ b/_includes/info.html
@@ -10,7 +10,7 @@
 
 
 <div style="width: 100%; overflow: hidden;">
-    <div style="float:left"> {% include herobox %} </div>
+    <div style="float:left"> </div>
     <div style="float:right">{% include contact %} </div>
 </div>
 
