--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,10 +22,10 @@
           <!--<h2 id="project_tagline">Trade office template for new Trade.gov</h2>-->
           
                             <ul id="forkme_banner">
-        <center><li><a href="#">Sign in</a> |</li>
+        <li><a href="#">Sign in</a> |</li>
         <li><a href="#">Register</a> |</li>
-        <li><a href="https://developer.trade.gov">Developer API</a> </li>
-        {% include search %}</center>
+        <li><a href="http://developer.trade.gov">Developer API</a> </li>
+        {% include search %}
         <li><a href="https://www.facebook.com/TradeGov"><img  src="images/fb.png" width="25px"></a> </li>
         <li><a href="https://twitter.com/TradeGov"><img  src="images/twit.png" width="25px"></a> </li>
         <li><a href="http://blog.trade.gov/"><img  src="images/tradeology.png" width="25px"></a> </li>
