--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,79 +1,113 @@
+<style>
+
+#container{
+width: 100%;
+float: left;
+}
+#foot {
+width:100px;
+display: inline-block;
+float:left;
+}
+</style>
+
+
+
+
+
 
 
     <div id="footer_wrap2" class="outer">
       <footer class="inner">
-      <table id="foot">
-<tr>
-		<td><p><strong>Export Process</strong> 
-		<ul style="list-style-type:none;">
-		<li><a href="#">Export Basics</a></li>
-		<li><a href="#">Basic Guide to Exporting</a></li>
-		<li><a href="#">Export Readiness Assessment</a></li>
-		<li><a href="#">International Logistics</a></li>
-		</ul>
-		</p></td>
 
-		<td><p><strong>Opportunities</strong>
-		<ul style="list-style-type:none;">
-		<li><a href="#">Expand Into New Markets</a></li>
-		<li><a href="#">Market Research</a></li>
-		<li><a href="#">Success Stories</a></li>
-		</ul>
-		</p></td>
+<div id="container">
 
-		<td><p><strong>Financing</strong>
-		<ul style="list-style-type:none;">
-		<li><a href="#">Finance Your Exports</a></li>
-		<li><a href="#">Assess Your Finance Options</a></li>
-		<li><a href="#">Getting Paid</a></li>
-		<li><a href="#">Trade Finance Guide</a></li>
+		<ul id="foot">
+		Export Process
+		<li><a href="/community/users/export-basics">Export Basics</a></li>
+		<li><a href="/basic-guide/">Basic Guide to Exporting</a></li>
+		<li><a href="/export-readiness-assessment/login">Export Readiness Assessment</a></li>
+		<li><a href="/community/users/international-logistics">International Logistics</a></li>
 		</ul>
-		</p></td>
 
-		<td><p><strong>Regulations</strong>
-		<ul style="list-style-type:none;">
-		<li><a href="#">Export Licences & Regulations</a></li>
+		<ul id="foot">
+		Opportunities
+		<li>Conduct Research</li>
+		<li><a href="/community/users/expand-your-exports">Expand Into New Markets</a></li>
+		<li><a href="/community/users/market-research">Market Research</a></li>
+		<li><a href="/community/users/export-success-stories">Success Stories</a></li>
+		<li>Learn Marketing Tactics</li>
+		<li><a href="/community/users/international-sales-and-marketing">International Sales & Marketing</a></li>
+		<li><a href="/community/users/selling-online">Selling Online</a></li>
 		</ul>
-		</p>
-		<p><strong>Trade Problems</strong>
-		<ul style="list-style-type:none;">
-		<li><a href="#">Problem 1</a></li>
-		<li><a href="#">Problem 2</a></li>
+				
+		<ul id="foot">
+		<li>Explore Markets</li>
+		<li><a href="/community/users/trade-leads">Find Trade Leads</a></li>
+		<li><a href="/community/users/trade-missions">Trade Missions</a></li>
+		<li><a href="/community/users/free-trade-agreements">Free Trade Agreements</a></li>
+		<li><a href="/doing-business-in-africa">Doing Business in Africa</a></li>
+		<li>Explore Programs</li>
+		<li><a href="/community/users/civil-nuclear-guide-to-exporting">Civil Nuclear Guide to Exporting</a></li>
+		<li><a href="/community/users/environmental-solutions-exporters-portal">Environmental Solutions Exporters</a></li>
+		<li><a href="/community/users/renewable-energy-energy-efficiency-exporter-portal">Renewable Energy & Energy Efficiency Exporters</a></li>
+		<li><a href="/community/users/league-of-green-embassies">League of Green Embassies</a></li>
+		<li><a href="/community/users/minority-exporters-seminar">Minority Exporters Seminar</a></li>
+		<li><a href="/community/users/seaport-partnerships">Seaport Partnerships</a></li>
 		</ul>
-		</p>
-		</td>
-				<td><p><strong>Events & Training</strong>
-		<ul style="list-style-type:none;">
-		<li><a href="#">Trade Events</a></li>
-		<li><a href="#">Training Programs</a></li>
-		<li><a href="#">Webinars</a></li>
-		</ul>
-		</p></td>
-		<td>
-		<p><strong>Get Answers</strong>
-		<ul style="list-style-type:none;">
-		<li><a href="#">Browse FAQs</a></li>
-		<li><a href="#">Ask a Question</a></li>
-		<li><a href="#">Contact a Trade Specialist</a></li>
-		<li><a href="#">Domestic Offices</a></li>
-		<li><a href="#">International Offices</a></li>
-		</ul>
-		</p>
-		</td>
 
-		<td>
-		<p><strong>Get Export Assistance</strong>
-		<ul style="list-style-type:none;">
-		<li><a href="#">Our Locations</a></li>
-		<li><a href="#">Our People</a></li>
-		<li><a href="#">Our Partners</a></li>
+		<ul id="foot">
+		Financing
+		<li><a href="/community/users/financing-your-exports">Finance Your Exports</a></li>
+		<li><a href="/international-finance-questionnaire/">Assess Your Finance Options</a></li>
+		<li><a href="/trade-finance-guide">Trade Finance Guide</a></li>
 		</ul>
-		</p>
-		</td>
-</tr>
-</table>   
+
+		<ul id="foot">
+		Regulations
+		<li>US Export Regulations</li>
+		<li><a href="/community/users/export-licenses-regulations">Export Licenses & Regulations</a></li>
+		<li><a href="/consolidated-screening-list">Consolidated Screening List</a></li>
+		<li>European Regulations</li>
+		<li><a href="/community/users/ce-marking">CE Marking</a></li>
+		<li><a href="/safe-harbor">Safe Harbor</a></li>
+		</ul>
+
+		<ul id="foot">
+		Trade Problems
+		<li><a href="/community/users/trade-problems">Help with Trade Problems</a></li>
+		</ul>
+
+		<ul id="foot">
+		Trade Events
+		<li><a href="/trade-events/">Trade Events</a></li>
+		<li><a href="/community/users/training-programs">Training & Webinars</a></li>
+		</ul>
+
+		<ul id="foot">
+		Get Answers
+		<li><a href="https://help.export.gov/">Browse FAQs</a></li>
+		<li><a href="https://help.export.gov/ics/support/ticketnewwizard.asp?style=classic">Market Research</a></li>
+		</ul>
+
+		<ul id="foot">
+		Find Answers & Contacts
+		<li><a href="https://help.export.gov/ics/support/contactUs.asp">Contact a Trade Specialist</a></li>
+		<li><a href="/centers">Domestic Offices</a></li>
+		<li><a href="/international-offices">International Offices</a></li>
+		<li><a href="/community/users/district-export-councils">District Export Councils</a></li>
+		</ul>
+
+  </div>
       </footer>
     </div>  
+    
+    
+    
+    
+    
+    
+    
    
     <div id="footer_wrap" class="outer">
       <footer class="inner">
