--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,29 +1,13 @@
-<style>
-
-#container{
-width: 100%;
-float: left;
-}
-#foot {
-width:100px;
-display: inline-block;
-float:left;
-}
-</style>
-
-
-
-
 
 
 
     <div id="footer_wrap2" class="outer">
       <footer class="inner">
 
-<div id="container">
+<div class="clearfix">
 
 		<ul id="foot">
-		Export Process
+		<p><strong>Export Process</strong></p>
 		<li><a href="/community/users/export-basics">Export Basics</a></li>
 		<li><a href="/basic-guide/">Basic Guide to Exporting</a></li>
 		<li><a href="/export-readiness-assessment/login">Export Readiness Assessment</a></li>
@@ -31,23 +15,24 @@ float:left;
 		</ul>
 
 		<ul id="foot">
-		Opportunities
-		<li>Conduct Research</li>
+		<p><strong>Opportunities</strong></p>
+		<li id="whi">Conduct Research</li>
 		<li><a href="/community/users/expand-your-exports">Expand Into New Markets</a></li>
 		<li><a href="/community/users/market-research">Market Research</a></li>
 		<li><a href="/community/users/export-success-stories">Success Stories</a></li>
-		<li>Learn Marketing Tactics</li>
+		<li id="whi">Learn Marketing Tactics</li>
 		<li><a href="/community/users/international-sales-and-marketing">International Sales & Marketing</a></li>
 		<li><a href="/community/users/selling-online">Selling Online</a></li>
 		</ul>
 				
 		<ul id="foot">
-		<li>Explore Markets</li>
+		<p></p>
+		<li id="whi">Explore Markets</li>
 		<li><a href="/community/users/trade-leads">Find Trade Leads</a></li>
 		<li><a href="/community/users/trade-missions">Trade Missions</a></li>
 		<li><a href="/community/users/free-trade-agreements">Free Trade Agreements</a></li>
 		<li><a href="/doing-business-in-africa">Doing Business in Africa</a></li>
-		<li>Explore Programs</li>
+		<li id="whi">Explore Programs</li>
 		<li><a href="/community/users/civil-nuclear-guide-to-exporting">Civil Nuclear Guide to Exporting</a></li>
 		<li><a href="/community/users/environmental-solutions-exporters-portal">Environmental Solutions Exporters</a></li>
 		<li><a href="/community/users/renewable-energy-energy-efficiency-exporter-portal">Renewable Energy & Energy Efficiency Exporters</a></li>
@@ -57,41 +42,41 @@ float:left;
 		</ul>
 
 		<ul id="foot">
-		Financing
+		<p><strong>Financing</strong></p>
 		<li><a href="/community/users/financing-your-exports">Finance Your Exports</a></li>
 		<li><a href="/international-finance-questionnaire/">Assess Your Finance Options</a></li>
 		<li><a href="/trade-finance-guide">Trade Finance Guide</a></li>
 		</ul>
 
 		<ul id="foot">
-		Regulations
-		<li>US Export Regulations</li>
+		<p><strong>Regulations</strong></p>
+		<li id="whi">US Export Regulations</li>
 		<li><a href="/community/users/export-licenses-regulations">Export Licenses & Regulations</a></li>
 		<li><a href="/consolidated-screening-list">Consolidated Screening List</a></li>
-		<li>European Regulations</li>
+		<li id="whi">European Regulations<li>
 		<li><a href="/community/users/ce-marking">CE Marking</a></li>
 		<li><a href="/safe-harbor">Safe Harbor</a></li>
 		</ul>
 
 		<ul id="foot">
-		Trade Problems
+		<p><strong>Trade Problems</strong></p>
 		<li><a href="/community/users/trade-problems">Help with Trade Problems</a></li>
 		</ul>
 
 		<ul id="foot">
-		Trade Events
+		<p><strong>Trade Events</strong></p>
 		<li><a href="/trade-events/">Trade Events</a></li>
 		<li><a href="/community/users/training-programs">Training & Webinars</a></li>
 		</ul>
 
 		<ul id="foot">
-		Get Answers
+		<p><strong>Get Answers</strong></p>
 		<li><a href="https://help.export.gov/">Browse FAQs</a></li>
 		<li><a href="https://help.export.gov/ics/support/ticketnewwizard.asp?style=classic">Market Research</a></li>
 		</ul>
 
 		<ul id="foot">
-		Find Answers & Contacts
+		<p><strong>Find Answers & Contacts</strong></p>
 		<li><a href="https://help.export.gov/ics/support/contactUs.asp">Contact a Trade Specialist</a></li>
 		<li><a href="/centers">Domestic Offices</a></li>
 		<li><a href="/international-offices">International Offices</a></li>
