--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 
-
+</section>
 
     <div id="footer_wrap2" class="outer">
       <footer class="inner">
@@ -97,21 +97,20 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
 
-        <p class="copyright"><div id="footerdivider">
+        <p class="copyright">
 <center><div class="footerdivideotitle">www.TRADE.gov</div><br />
 <div><p><a href="http://trade.gov/feedback.asp">Website Feedback</a> | <a href="http://www.usa.gov">USA.gov</a> | <a href="http://trade.gov/foia/">FOIA</a> | <a href="http://trade.gov/privacy.asp">Privacy Policy</a> | <a href="http://trade.gov/endorse.asp">Disclaimer</a> |
 <a href="http://trade.gov/ITAiqs.pdf">Information Quality Guidelines</a></p>
 </div>
-</div></center>
-<div class="disclamier">
+</center>
+
 <p>The <a href="http://www.trade.gov">International Trade Administration</a>, <a href="http://www.commerce.gov">U.S.
 Department of Commerce</a>, manages this global trade site to provide access to ITA information on promoting trade and investment, strengthening
 the competitiveness of U.S. industry, and ensuring fair trade and compliance with trade laws and agreements. External links to other Internet
 sites should not be construed as an endorsement of the views or privacy policies contained therein. This site contains PDF documents.
-A <a href="http://get.adobe.com/reader">PDF reader</a> is available from Adobe Systems Incorporated.</p></div>
-</div><!--ending Main Div -->
-</div><!--ending Inside Wrapper Div -->
-</div><!--ending Wrapper Div -->
+A <a href="http://get.adobe.com/reader">PDF reader</a> is available from Adobe Systems Incorporated.</p>
+
+
         </p>
    
       </footer>
