--- a/_includes/main.html
+++ b/_includes/main.html
@@ -5,6 +5,8 @@
 <ul id="main">{% include mrr %} </ul>
 <ul id="main">{% include faqs %} </ul>
 <ul id="main">{% include articles %}</ul>
+</div>
+<div class="clearfix">
 <ul id="main">{% include resources %}</ul>
 <ul id="main">{% include network %}</ul>
  </div>
