--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,10 +1,10 @@
 
 	
 <div class="clearfix">
-<ul id="main">{% include events %} </ul>
-<ul id="main">{% include mrr %} </ul>
-<ul id="main">{% include faqs %} </ul>
-<ul id="main">{% include articles %}</ul>
+<ul id="main">{% include events %}<a href="/office/events.html">View All Events</a> </ul>
+<ul id="main">{% include mrr %}  <a href="/office/toolkit.html">View MRR</a></ul>
+<ul id="main">{% include faqs %}  <a href="/office/faqs.html">View All FAQs</a></ul>
+<ul id="main">{% include articles %}<a href="/office/articlelist.html">View All Articles</a></ul>
 </div>
 <div class="clearfix">
 <ul id="main">{% include resources %}</ul>
