--- a/_includes/info.html
+++ b/_includes/info.html
@@ -6,12 +6,4 @@
       <section id="main_content" class="inner">
 
 {% include title %}
-
-
-
-<div style="width: 100%; overflow: hidden;">
-    <div style="float:left"> {% include herobox %}  </div>
-    <div style="float:right">{% include contact %} </div>
-</div>
-
-
+ {% include herobox %}
