--- a/_includes/main.html
+++ b/_includes/main.html
@@ -2,7 +2,7 @@
 	
 <div class="clearfix">
 <ul id="main">{% include events %}<a href="/office/events.html">View All Events</a> </ul>
-<ul id="main">{% include mrr %}  <a href="/office/toolkit.html">View MRR</a></ul>
+<ul id="main">{% include mrr %}  <a href="/office/mrr.html">View MRR</a></ul>
 <ul id="main">{% include faqs %}  <a href="/office/faqs.html">View All FAQs</a></ul>
 <ul id="main">{% include articles %}<a href="/office/articlelist.html">View All Articles</a></ul>
 </div>
