--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,8 +23,8 @@
         <header class="inner">
           
 
-                    <a id="project_title" href="/office"><img  src="images/ita.jpg" width="250px"></a>
-          <!--<h2 id="project_tagline">Trade office template for new Trade.gov</h2>-->
+                    <a id="project_title" href="/office"><img  src="images/whiteita.png" ></a>
+          <p id="project_tagline">A bureau within the <a href="http://www.commerce.gov">U.S. Department of Commerce</a></p>
           
                             <ul id="forkme_banner">
         <li><a href="/office/signin.html">Sign in</a> |</li>
@@ -38,14 +38,9 @@
         </ul>
 
 
-            <!--<section id="downloads">
-              <a class="zip_download_link" href="https://github.com/ajsingh273/office/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/ajsingh273/office/tarball/master">Download this project as a tar.gz file</a>
-            </section>-->
+            <section id="downloads">
+              <img  src="images/CS_logo color.png" ></section>
         </header>
     </div>
 {% include nav %}
-
-
-     	
 
