--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,8 +38,8 @@
         </ul>
 
 
-            <section id="downloads">
-              <img  src="images/CS_logo color.png" ></section>
+            <!--<section id="downloads">
+              <img  src="images/CS_logo color.png" ></section>-->
         </header>
     </div>
 {% include nav %}
