--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -82,7 +82,12 @@
 		<li><a href="/international-offices">International Offices</a></li>
 		<li><a href="/community/users/district-export-councils">District Export Councils</a></li>
 		</ul>
-
+<ul id="forkme_banner2">
+        <li><a href="https://www.facebook.com/TradeGov"><img  src="images/fb.png" width="50px"></a> </li>
+        <li><a href="https://twitter.com/TradeGov"><img  src="images/twit.png" width="50px"></a> </li>
+        <li><a href="http://blog.trade.gov/"><img  src="images/tradeology.png" width="50px"></a> </li>
+        <li><a href="http://trade.gov/connect.asp"><img  src="images/mail.png" width="50px"></a> </li>
+        </ul>
   </div>
       </footer>
     </div>  
