--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -10,8 +10,8 @@ permalink:
       
     <center><h1>CE Marking Guide</h1></center></br>
 
-
-			<div>
+<div class="clearfix">
+			<div id="main" style="width:200px; display:inline-block;background:#d9d9d9; padding:20px;">
 						<ul id="leftnav_wrapper">
 
 							<li>
@@ -30,14 +30,14 @@ permalink:
 							</li>
 						</ul>
 						</div>
-<div>
+<div id="main" style="width:600px;">
 					
 {{ content }}
       
      </div>
           </div>
-</div>
 
 </section>
 </div>
+
 {% include footer.html %}
