--- a/_layouts/searchtoolkit.html
+++ b/_layouts/searchtoolkit.html
@@ -5,5 +5,5 @@ permalink:
 
 {% include header.html %}
 {% include heroboxhome %}
-{% include searchtool %}
+{{ content }}
 {% include footer.html %}
