--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -3,7 +3,7 @@ Title: Guide
 permalink: 
 ---
 
-
+<title>{{ page.title }}</title>
 {% include header.html %}
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
