--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -3,8 +3,48 @@ Title: Article
 permalink: 
 ---
 
+
+{% include header.html %}
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+      
+      <div class=clearfix>
+      
+      <div style="width:800px" id="main3">
 {{ content }}
+</div>
+
+   <div id="main3" style="width:200px;"><h5>Related Articles</h5>
+   <ul >
+   <li style="color:#212121"><a href="http://export.gov/ecr/index.asp">Export Control Reform</a></li>
+   <li style="color:#212121"><a href="http://export.gov/europeanunion/reachclp/index.asp">New EU REACH Program</a></li>
+   <li style="color:#212121"><a href="http://export.gov/cemark/index.asp">CE Mark Regulations</a></li>
+   <li style="color:#212121"><a href="http://export.gov/logistics/eg_main_018131.asp">Guide to Using NAFTA</a></li>
+   <li style="color:#212121"><a href="http://www.unzco.com/basicguide/c6.html#technology">Basics: Tech. Licensing</a></li>
+   <li style="color:#212121"><a href="http://www.unzco.com/basicguide/c9.html#export">Basics: Regulation</a></li>
+   <li style="color:#212121"><a href="http://export.gov/tradeproblems/eg_main_018580.asp">Intel. Property Rights</a></li>
+   <li style="color:#212121"><a href="http://www.treasury.gov/resource-center/sanctions/Programs/Pages/Programs.aspx">Economic Sanctions</a></li>
+   </ul>
+   </div>
+   
+   </div>
+   
+   <ul id="tags">
+  <li><a href="#" id="tag">Exporting</a></li>
+  <li><a href="#" id="tag">Trade Regulations</a></li>
+  <li><a href="#" id="tag">Dual Use Export Licenses</a></li>
+  <li><a href="#" id="tag">Security & Safety</a></li>
+  <li><a href="#" id="tag">Marine Technology</a></li>
+  <li><a href="#" id="tag">Industrial Equipment & Supplies</a></li>
+  <li><a href="#" id="tag">Chemicals</a></li>
+  <li><a href="#" id="tag">Plastics & Composites</a></li>
+   <li><a href="#" id="tag">North America</a></li>
+    <li><a href="#" id="tag"> United States</a></li>
+     <li><a href="#" id="tag">NAFTA</a></li>
+     <li><a href="#" id="tag">Washington D.C.</a></li>
+     <li><a href="#" id="tag"> Northern Virginia</a></li>
+     
+</ul>
 
  
- 
- 
+ {% include footer.html %}
