--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -13,26 +13,25 @@ permalink:
 					
 {{ content }}
       
+      {% include faqshome %}
      </div>
+     
 			<div id="main" style="width:200px; display:inline-block; padding:20px;">
 						<ul id="leftnav_wrapper">
 
 							<li>
-								<ul>
+									<ul>
 								<li><h5>Guide</h5></li>
-								<li style="display:inline-block;padding:10px;background:#6D98BF;margin-bottom:5px;width:150px"><a href="cemarking-home.html" style="color:#fff;">CE Marking - Home</a></li>
-								<li style="display:inline-block;padding:10px;background:#6D98BF;margin-bottom:5px;width:150px"><a href="cemarking-program.html" style="color:#fff;">Program Overview</a></li>
-								<li style="display:inline-block;padding:10px;background:#6D98BF;margin-bottom:5px;width:150px"><a href="cemarking-countries.html" style="color:#fff;">CE Marking Countries</a></li>
-								<li style="display:inline-block;padding:10px;background:#6D98BF;margin-bottom:5px;width:150px"><a href="cemarking-guide.html" style="color:#fff;">CE Marking Guide</a></li>									
-								<li style="display:inline-block;padding:10px;background:#6D98BF;margin-bottom:5px;width:150px"><a href="cemarking-labs.html" style="color:#fff;">Testing/Certifying Labs</a></li> 
-								<li style="display:inline-block;padding:10px;background:#6D98BF;margin-bottom:5px;width:150px"><a href="cemarking-procedures.html" style="color:#fff;">Technical File Procedures</a></li>  
-								 <li style="display:inline-block;padding:10px;background:#6D98BF;margin-bottom:5px;width:150px"><a href="cemarking-declaration.html" style="color:#fff;">Declaration of Conformity</a></li> 
-								 <li style="display:inline-block;padding:10px;background:#6D98BF;margin-bottom:5px;width:150px"><a href="cemarking-standards.html"style="color:#fff;">Consultants/Ordering Standards</a></li> 
-								 <li style="display:inline-block;padding:10px;background:#6D98BF;margin-bottom:5px;width:150px"><a href="cemarking-faq.html" style="color:#fff;">FAQs</a></li> 
-								 <li style="display:inline-block;padding:10px;background:#6D98BF;margin-bottom:5px;width:150px"><a href="cemarking-contacts.html" style="color:#fff;">U.S. Gov't Contacts</a></li>   
+								<li style="display:inline-block;padding:10px;background:#6D98BF;margin-bottom:5px;width:200px"><a href="cemarking-home.html" style="color:#fff;">CE Marking Guide</a></li>
+								<li style="display:inline-block;padding:10px;background:#6D98BF;margin-bottom:5px;width:200px"><a href="safety-of-machinery.html" style="color:#fff;">Safety of Machinery</a></li>
+								<li style="display:inline-block;padding:10px;background:#6D98BF;margin-bottom:5px;width:200px"><a href="cemarking-process.html" style="color:#fff;">Overview of the CE Marking Process for the Low Voltage Directive</a></li>
+								<li style="display:inline-block;padding:10px;background:#6D98BF;margin-bottom:5px;width:200px"><a href="cemarking-emc.html" style="color:#fff;">CE Marking Process for the Electromagnetic Compatibility (EMC) Directive</a></li>									
+								<li style="display:inline-block;padding:10px;background:#6D98BF;margin-bottom:5px;width:200px"><a href="cemarking-standards.html" style="color:#fff;">Consultants/Ordering Standards</a></li>   
 								</ul>
 							</li>
 						</ul>
+						</br></br></br>
+						{% include join %}
 						</div>
 
           </div>
