--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -1,3 +1,8 @@
+---
+Title: Guide 
+permalink: 
+---
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
@@ -76,39 +81,7 @@
 
 
 
-<h4>CE Marking – U.S. Gov’t Contacts</h4>
-
-
-<p>Bob Straetz</p>
-
-<p>European Union (EU) Specialist</p>
-
-<p>Office of European Union and Regional Affairs</p>
-
-<p>International Trade Administration</p>
-
-<p>Department of Commerce</p>
-
-<p>Phone: 202-482-4496</p>
-
-<p>Fax: 202-482-2897</p>
-
-<p>Sylvia Mohr</p>
-
-<p>Standards Specialist</p>
-
-<p>Commercial Service</p>
-
-<p>U.S. Mission to the European Union</p>
-
-<p>Brussels, Belgium</p>
-
-<p>Phone: 011 322 811 5001</p>
-
-<p>Fax: 011 322 811 5151</p>
-
-<p>Website: http://www.export.gov/europeanunion</p>
-
+{{ content }}
 
  				</div>
 
