--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -32,11 +32,11 @@ permalink:
 
 		<div id="header">
 
-			<div id="brand">
+			<a href="/office"><div id="brand">
 
 				
 
-			</div>
+			</div></a>
 
 			<h1>Export Guide</h1>
 
