--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -3,6 +3,10 @@ Title: Guide
 permalink: 
 ---
 
+{% include header.html %}
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+      
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
@@ -46,7 +50,7 @@ permalink:
 
 		<div id="cpanel">
 
-			<div id="nav">
+			<div id="nav2">
 
 				<ul class="accordion">
 
@@ -96,3 +100,8 @@ permalink:
 </body>
 
 </html>
+
+</section>
+</div>
+
+{% include footer.html %}
