--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
         <header class="inner">
           
 
-                    <a id="project_title" href="/office"><img  src="images/ita2.jpg" ></a>
+                    <a id="project_title" href="/office"><img  src="images/horizontal_emblem_blue.jpg" width="200" ></a>
           <p id="project_tagline">A bureau within the <a href="http://www.commerce.gov">U.S. Department of Commerce</a></p>
           
                             <ul id="forkme_banner">
