--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -34,17 +34,7 @@ permalink:
 
 	<div id="site">
 
-		<div id="header">
-
-			<a href="/office"><div id="brand">
-
-				
-
-			</div></a>
-
-			<h1>Guide to Exporting</h1>
-
-		</div>
+		
 
 		<div id="carea">
 
@@ -58,17 +48,17 @@ permalink:
 
 						<ul class="maingroups">
 
-							<li><a href="cemarking-home.html"><span>CE Marking Guide</span></a></li>
+							<li><a href="cemarking-program.html"><span>CE Marking Guide</span></a></li>
 
 							<li><a href="safety-of-machinery.html"><span>Safety of Machinery</span></a></li>
 
-							<li><a href="cemarking-process.html"><span>Overview of the CE Marking Process for the Low Voltage Directive</span></a></li>
+							<li><a href="cemarking-process.html"><span>Low Voltage Directive</span></a></li>
 
-							<li><a href="cemarking-emc.html"><span>CE Marking Process for the Electromagnetic Compatibility (EMC) Directive</span></a></li>
+							<li><a href="cemarking-emc.html"><span>Electromagnetic Compatibility (EMC) Directive</span></a></li>
 
 							<li><a href="cemarking-standards.html"><span>Consultants/Ordering Standards</span></a></li>
 							
-							<li><a href="faqs.html"><span>FAQs</span></a></li>
+							<li><a href="cemarking-faqs.html"><span>FAQs</span></a></li>
 							
 						</ul>
 
