--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -10,11 +10,11 @@ permalink:
       
       <div class=clearfix>
       
-      <div style="width:800px" id="main3">
+      <div style="width:800px;background:#F5F5F5;padding:20px;" id="main3">
 {{ content }}
 </div>
 
-   <div id="main3" style="width:200px;"><h5>Related Articles</h5>
+   <div id="main3" style="margin-left:25px;margin-top:50px;width:150px;border:solid 1px;border-color:#c1c1c1;"><h5 style="background:#F5F5F5;padding:5px;">Related Articles</h5>
    <ul >
    <li style="color:#212121"><a href="http://export.gov/ecr/index.asp">Export Control Reform</a></li>
    <li style="color:#212121"><a href="http://export.gov/europeanunion/reachclp/index.asp">New EU REACH Program</a></li>
@@ -30,20 +30,31 @@ permalink:
    </div>
    
    <h5>Related Tags</h5>
+   <h7 style="font-size:16px;color:#000;">Location</h7>
    <ul id="tags">
-  <li><a href="#" id="tag">Exporting</a></li>
-  <li><a href="#" id="tag">Trade Regulations</a></li>
-  <li><a href="#" id="tag">Dual Use Export Licenses</a></li>
-  <li><a href="#" id="tag">Security & Safety</a></li>
+   <li><a href="#" id="tag">North America</a></li>
+    <li><a href="#" id="tag"> United States</a></li>
+    <li><a href="#" id="tag">Washington D.C.</a></li>
+     <li><a href="#" id="tag"> Northern Virginia</a></li>
+     </ul>
+    
+    <h7 style="font-size:16px;color:#000;">Industry</h7>
+    <ul id="tags">
+   <li><a href="#" id="tag">Security & Safety</a></li>
   <li><a href="#" id="tag">Marine Technology</a></li>
   <li><a href="#" id="tag">Industrial Equipment & Supplies</a></li>
   <li><a href="#" id="tag">Chemicals</a></li>
   <li><a href="#" id="tag">Plastics & Composites</a></li>
-   <li><a href="#" id="tag">North America</a></li>
-    <li><a href="#" id="tag"> United States</a></li>
-     <li><a href="#" id="tag">NAFTA</a></li>
-     <li><a href="#" id="tag">Washington D.C.</a></li>
-     <li><a href="#" id="tag"> Northern Virginia</a></li>
+  </ul>
+  
+  <h7 style="font-size:16px;color:#000;">Topic</h7>
+    <ul id="tags">
+   
+  <li><a href="#" id="tag">Exporting</a></li>
+  <li><a href="#" id="tag">Trade Regulations</a></li>
+  <li><a href="#" id="tag">Dual Use Export Licenses</a></li>
+  <li><a href="#" id="tag">NAFTA</a></li>
+     
      
 </ul>
 
