--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
         <li><a href="/office/signin.html">Sign in</a> |</li>
         <li><a href="/office/signin.html">Register</a> |</li>
         <li><a href="http://developer.trade.gov">Developer API</a> </li>
-        {% include search %}
+        <li>{% include search %}</li>
         </ul>
 
 
@@ -40,3 +40,4 @@
     </div>
 {% include nav %}
 
+<a href="javascript:if(window.print)window.print()" style="float:right;">Print</a>
